<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrwLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="46dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/dashboardLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textStyle="bold"
                android:textColor="@color/burnt_siena"
                />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/dashboardLayout"
            android:layout_width="410dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="331dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timesheetList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnAddTimesheet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-200dp"
            android:text="@string/btnAddTimeSheet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboardLayout" />

        <Button
            android:id="@+id/btnAddCategory2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-200dp"
            android:layout_marginTop="-100dp"
            android:text="@string/btnAddCategory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboardLayout" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/btnRefresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddTimesheet2"
            app:layout_constraintStart_toEndOf="@+id/btnAddCategory2"
            app:layout_constraintTop_toBottomOf="@+id/dashboardLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu"
    />


</androidx.drawerlayout.widget.DrawerLayout>