<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrwLayoutAccountDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetails"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarAccountDetails"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toolbarSubAccountDetails"
            android:textAlignment="center"
            android:textColor="@color/burnt_siena"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginBottom="-2500dp"
        android:importantForAccessibility="no"
        android:src="@drawable/_fymasaazjvcsepagi7xtnmlbr4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edtDisplayPicURL"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:hint="Ener profile picture URL"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword3"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

    </EditText>

    <EditText
        android:id="@+id/edtUsername2"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:hint="Ener Username"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

    </EditText>

    <EditText
        android:id="@+id/edtEmail3"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

    </EditText>

    <EditText
        android:id="@+id/edtPassword3"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:hint="@string/enter_password2"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:passwordToggleEnabled="true"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

    </EditText>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Confirm Changes"
        android:backgroundTint="@color/burnt_siena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDisplayPicURL" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_accountdetails"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>